hot fix for line height and message spacing

--- a/discord_themes/addons/alky_CV_addons.css
+++ b/discord_themes/addons/alky_CV_addons.css
@@ -356,6 +356,13 @@ section[aria-label="User area" i] .wrapper-1VLyxH{
     /*includes #status-picker, submenus among other things*/
 }
 /*-----CHAT BOX-----*/
+/* Adjusted message spacing and increased message line height*/ 
+.message-2CShn3:not(.systemMessage-1H1Z20):not(.groupStart-3Mlgv1) .messageContent-2t3eCI:not(.repliedTextContent-2hOYMB){
+    margin-top: 0.75rem;
+}
+.markup-eYLPri.messageContent-2t3eCI{
+    line-height: 1.5rem;
+}
 /* JOIN BUTTON */
 /*ex. the join button when receive server invite*/
 [data-list-id="chat-messages"] button[class*="lookFilled"][class*="colorGreen"]{
